--- a/page3.html
+++ b/page3.html
@@ -17,6 +17,7 @@
                     "You don't have to handle this alone. I'm here for you, always. Your pain is my pain, too."<br>
                     "Let me be the one who carries some of your weight, Amrit. You've done so much for everyone around you. Let me do this for you."
                 </p>
+                <button id="nextBtn" class="next-btn">Next</button>
             </div>
         </div>
     </div>
